# routes/api.php
@@ -128,6 +128,7 @@ Route::post('/user/verifyOtp', [MerchantController::class, 'verifyOtp']);
 Route::get('/categories-with-merchants', [MerchantCategoryController::class, 'index']);
 Route::get('/merchant/{merchantId}/products', [ProductController::class, 'getProductsByMerchant']);
 Route::get('/products', [ProductController::class, 'getAllProducts']);
+Route::get('/catalog', [ProductController::class, 'catalog']);
 Route::get('/merchants', [MerchantController::class, 'getMerchants']);
 Route::get('/merchant-category/{categoryId}/merchants', [MerchantController::class, 'getMerchantsByMerchantCategory']);
 Route::get('/search-products', [ProductController::class, 'searchProducts']);
